--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,10 @@
-org.gradle.jvmargs=-Xmx8G -XX:MaxMetaspaceSize=4G -XX:ReservedCodeCacheSize=512m -XX:+HeapDumpOnOutOfMemoryError
+org.gradle.jvmargs=-Xmx2048M -XX:MaxMetaspaceSize=512m -Dfile.encoding=UTF-8
+org.gradle.parallel=true
+org.gradle.configureondemand=true
+org.gradle.daemon=true
+org.gradle.workers.max=2
+
 android.useAndroidX=true
 android.enableJetifier=true
+android.ndkVersion=27.0.12077973
+#org.gradle.java.home=C\:\\Program Files\\Eclipse Adoptium\\jdk-17.0.13.11-hotspot
